<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/detail_cl"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.StateListFragment"
        android:background="@color/white"
        android:clickable="true"
        android:focusable="true"
        android:padding="10dp">

        <TextView
            android:id="@+id/state_name_tv"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:textSize="40sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
...
